# redminecli

./: .gitignore  LICENSE  README.md  pyproject.toml  requeriments.txt  setup.cfg
cli/: cli.py  config.py  redmine_instance.py  utils.py
